<resources>
    <string name="app_name">B07 Demo Summer 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string name="welcome_to">Welcome To,</string>
    <string name="planetze_logo">planetze logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="image_description">planetze logo</string>
    <string name="eco_tracker">Eco Tracker</string>
    <string name="logout">Logout</string>
    <string name="eco_agent">Eco Agent</string>
    <string name="eco_hub">Eco Hub</string>
    <string name="eco_balance">Eco Balance</string>
    <string name="eco_gauge">Eco Gauge</string>
    <string name="today_s_carbon_emissions">Today\'s Carbon Emissions:</string>
    <string name="daily_activities">Daily Activities</string>
    <string name="add_activity">Activities</string>
    <string name="activity_tracker">Activity Tracker</string>
    <string name="new_activity">New Activity</string>
    <string name="habits">Habits</string>
    <string name="habit_tracker">Habit Tracker</string>

    <string-array name="date_range_array">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="categories_array">
        <item>Books</item>
        <item>Movies</item>
    </string-array>
</resources>