<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <!-- Welcome message -->
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/planetze_logo"
        android:padding="16dp"
        android:contentDescription="@string/planetze_logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/eco_tracker_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eco_tracker"
        android:layout_margin="8dp"
        android:backgroundTint="#009999"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/eco_gauge_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eco_gauge"
        android:layout_margin="8dp"
        android:backgroundTint="#009999"
        app:layout_constraintTop_toBottomOf="@id/eco_tracker_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/eco_balance_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eco_balance"
        android:layout_margin="8dp"
        android:backgroundTint="#009999"
        app:layout_constraintTop_toBottomOf="@id/eco_gauge_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/eco_hub_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eco_hub"
        android:backgroundTint="#009999"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/eco_balance_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/eco_agent_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eco_agent"
        android:layout_margin="8dp"
        android:backgroundTint="#009999"
        app:layout_constraintTop_toBottomOf="@id/eco_hub_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/logout"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/eco_agent_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
