<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eco_tracker"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/dashboard_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/planetze_logo"
        android:padding="16dp"
        android:contentDescription="@string/planetze_logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/emissions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_s_carbon_emissions"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@id/dashboard_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/emissionsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0 kg CO2"
        android:textSize="20sp"
        android:textColor="#00796B"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/emissions_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>