<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_tracker"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/dashboard_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/planetze_logo"
        android:padding="16dp"
        android:contentDescription="@string/planetze_logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/new_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_activity"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@id/dashboard_image"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/category_transportation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="Transportation"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/new_activity_title"
        app:layout_constraintEnd_toStartOf="@id/category_food"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/category_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="Food Consumptions"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/new_activity_title"
        app:layout_constraintStart_toEndOf="@id/category_transportation"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/category_shopping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="Shopping"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/category_transportation"
        app:layout_constraintEnd_toStartOf="@id/category_energy"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/category_energy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="Energy"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/category_food"
        app:layout_constraintStart_toEndOf="@id/category_shopping"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#009999"
        android:text="@string/back"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/category_energy"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>